--- a/src/assets/css/LogReg.css
+++ b/src/assets/css/LogReg.css
@@ -4,7 +4,7 @@
     width: 100vw;
     justify-content: center;
     align-items: center;
-    background-image: url('/public/imgs/pexels-gdtography-911738.webp'),url('/public/imgs/pexels-gdtography-911738.webp');
+    background-image: url('/public/imgs/pexels-gdtography-911738.webp'),url('/public/imgs/pexels-gdtography-911738.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: screen;
