--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,23 @@
 body{
     background-color: rgba(255, 255, 255, 0.5);
 }
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #7a7a7a #ffffff;
+}
+
+*::-webkit-scrollbar {
+    width: 11px;
+    height: 11px;
+    /*for horizontal scroll bar */
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #7a7a7a;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+}
