--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -1,9 +1,4 @@
-:root {
-  --red: rgb(185, 43, 39);
-  --light-blue: #2e69ff;
-  --light-gray: #dadada;
-  --color-primary: #2e69ff;
-}
+
 .nav {
   display: flex;
   align-items: center;
@@ -11,7 +6,21 @@
   border-bottom: 1px solid #b7b7b8;
   flex-wrap: wrap;
 }
-
+.header{
+  z-index: 99;
+  width: 100%;
+  position: absolute;
+  background-color: #fff;
+}
+ .main:has(.header)::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 .input-box {
   display: flex;
   margin: 10px;
@@ -21,7 +30,7 @@
   border-radius: 5px;
 }
 .input-box:hover {
-  border: 0.5px solid var(--light-blue);
+  border: 0.5px solid var(--color-primary);
 }
 .input-box input {
   border-radius: 5px;
