--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: 100vh;
     align-items: center;
+    position: relative;
 }
 .main .body{
     width: 100%;
@@ -11,14 +12,32 @@
     background-color: #d9d9d9;
     margin: 30px;
     display: flex;
+    overflow: hidden;
 }
-.main .qna,.main .questions{
-    height: calc(95vh - 123px);
+.qna-qList{
+    width: 75%;
+}
+.link{
+    color: var(--color-link);
+    text-decoration: none;
+}
+.listItem{
+    margin: 10px 0;
+    cursor: pointer;
+}
+.main .qna, .main .questions{
+    height: calc(95vh - 150px);
     overflow-y: scroll;
 }
+
 @media screen and (max-width:650px) {
     .main .qna,.main .questions{
         height: calc(95vh - 184px);
         overflow-y: scroll;
+    }
+}
+@media screen and (max-width:800px) {
+    .main .qna-qList{
+        display: none;
     }
 }
