--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("react-tooltip/dist/react-tooltip.css");
+@import url("react-toastify/dist/ReactToastify.css");
+:root {
+    --red: rgb(185, 43, 39);
+    --light-gray: #dadada;
+    --dark-gray:#454545;
+    --color-primary: #2e69ff;
+    --color-link : #0000b5;
+    --color-white:#fff;
+    --icon-width:31px;
+  }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #7a7a7a #ffffff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*::-webkit-scrollbar {
+    width: 11px;
+    height: 11px;
+    /*for horizontal scroll bar */
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #7a7a7a;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
 }
