--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 @import url("react-tooltip/dist/react-tooltip.css");
 @import url("react-toastify/dist/ReactToastify.css");
 :root {
@@ -9,12 +10,15 @@
     --color-link : #0000b5;
     --color-white:#fff;
     --icon-width:31px;
+    --color-text:#636466;
+    --color-black: #282829;
   }
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 body{
     background-color: rgba(255, 255, 255, 0.5);
@@ -38,4 +42,14 @@ body{
     background-color: #7a7a7a;
     border-radius: 10px;
     border: 3px solid #ffffff;
+}
+.d-none{
+    display: none;
+}
+.d-block{
+    display: block;
+}
+button[disabled]{
+    opacity: 0.6;
+    cursor: default !important;
 }
