--- a/src/components/Cards/styles/Card.css
+++ b/src/components/Cards/styles/Card.css
@@ -122,6 +122,9 @@
   .voting-icons span{
     margin-left: 5px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
   }
   /* @media screen and (max-width: 450px) {
     .question {
