--- a/src/components/Header/styles/Header.style.css
+++ b/src/components/Header/styles/Header.style.css
@@ -72,6 +72,7 @@ header .svg_icons {
   height: 25px;
   border-radius: 50%;
   margin: 10px;
+  cursor: pointer;
 }
 .nav .active .icon_svg-fill_as_stroke {
   fill: var(--red);
@@ -147,7 +148,14 @@ header .svg_icons {
   height: 30px;
   padding: 0 25px !important;
 }
-
+.tooltip__btn{
+  background-color: transparent !important;
+  color: var(--color-white);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  width: 100%;
+}
 @media screen and (max-width: 1050px) {
   .sm-d,
   .login-btn,
