--- a/src/components/SideBar/Styles/SideBar.css
+++ b/src/components/SideBar/Styles/SideBar.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 100px;
 }
 .upperPanel__bar,.upperPanel__bar--active{
     cursor: pointer;
